--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="main-container">
+    <div class="action-container">
+        <div class="logo-container">
+            <img src="./../../assets/focus_logo.png" alt="">
+        </div>
+        <button (click)="loginRedirect()">Entrar</button>
+    </div>
+</div>
