--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,1 +1,30 @@
-<p>info works!</p>
+<div class="main-container">
+    <div class="header">
+        <img src="./../../assets/vale-logo-preto.png" alt="">
+        <img src="./../../assets/focus_name.png" alt="">
+        <div class="action">
+            <img src="./../../assets/user.png" alt="" (click)="showDropDown()">
+            <ul id="user-info" class="dropdown" *ngIf="dropdownVisible">
+                <li (click)="logout()">Sair</li>
+            </ul>
+        </div>
+    </div>
+    <div class="info-container">
+        <div class="info">
+            <h1>Bem-vindo, Usuário!</h1>
+            <p>O teste psicológico foi criado para medir sua atenção, para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
+            <div class="gif-content">
+                <img src="./../../assets/action.gif" alt="">
+            </div>
+            <p>Clique na barra de espaço do teclado, toda vez que a imagem correta aparecer.</p>
+        </div>
+        <div class="img-container">
+            <span>Figura Correta:</span>
+            <img id="random-img" src="./../../assets/triangulo_vazado.png" alt="">
+        </div>
+    </div>
+
+    <div class="footer">
+        <button (click)="redirectExam()">INICIAR</button>
+    </div>
+</div>
