--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');
+
+:root {
+	--background-color: #101726;
+	--default-text-color: white;
+	--btn-default-color: #F2E205;
+    --btn-default-hover: #4F5159;
+	--aux-blue: #95A2BF;
+	--aux-red: #F20505;
+	--aux-purple: #343773;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+	font-family: Poppins, sans-serif;
+}
