--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     background-repeat: no-repeat;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
 }
 .action-container {
