--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="info-container">
         <div class="info">
-            <h1>Bem-vindo, Usuário!</h1>
+            <h1>Bem-vindo, {{username}}</h1>
             <p>O teste psicológico foi criado para medir sua atenção, para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
             <div class="gif-content">
                 <img src="./../../assets/action.gif" alt="">
