--- a/src/app/exame/exame.component.scss
+++ b/src/app/exame/exame.component.scss
@@ -1,5 +1,19 @@
 .main-container {
     width: 100vw;
     height: 100vh;
-    background-color: red;
+    background-color: var(--background-color);
+}  
+.result-styles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    h1 {
+        color: var(--default-text-color);
+    }
+    img {
+        width: 15rem;
+    }
+
 }
