--- a/src/app/exame/exame.component.scss
+++ b/src/app/exame/exame.component.scss
@@ -4,16 +4,28 @@
     background-color: var(--background-color);
 }  
 .result-styles {
+    display: grid;
+    place-items: center;
+}
+.response-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
-    h1 {
+}
+
+.action-btn {
+    border: none;
+    padding: 1rem 3.5rem;
+    margin: 0 2rem 2rem 2rem;
+    background-color: var(--btn-default-color);
+    border-radius: 0.7rem;
+    font-weight: 600;
+    cursor: pointer;
+    color: var(--aux-purple);
+    &:hover {
+        background-color: var(--btn-default-hover);
         color: var(--default-text-color);
     }
-    img {
-        width: 15rem;
-    }
-
 }
