--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -16,7 +16,7 @@
             <div class="gif-content">
                 <img src="./../../assets/action.gif" alt="">
             </div>
-            <p>Clique na barra de espaço do teclado, toda vez que a imagem correta aparecer.</p>
+            <p>Clique na <span>barra de espaço</span> do teclado, toda vez que <span>a imagem correta aparecer.</span></p>
         </div>
         <div class="img-container">
             <span>Figura Correta:</span>
