--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="header">
-        <img src="./../../assets/vale-logo-branco.png" alt="" (click)="redirectHome()">
+        <img src="./assets/vale-logo-branco.png" alt="" (click)="redirectHome()">
     </div>
     <div class="secound-container">
         <div class="login-container">
@@ -15,7 +15,7 @@
                 <label for="password">Senha</label>
                 <div class="input-content">
                     <input type="password" id="password" [(ngModel)]="userData.password" (keyup.enter)="login()">
-                    <img src="./../../assets/eye_on.png" id="show-pass" alt="" (click)="showPassword()">
+                    <img src="./assets/eye_on.png" id="show-pass" alt="" (click)="showPassword()">
                     <span (click)="forgotPassword()">Esqueceu sua senha?</span>
                 </div>
             </div>
