--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,14 +1,5 @@
 <div class="main-container">
-    <div class="header">
-        <img src="./assets/vale-logo-preto.png" alt="">
-        <img src="./assets/focus_name.png" alt="">
-        <div class="action">
-            <img src="./assets/user.png" alt="" (click)="showDropDown()">
-            <ul id="user-info" class="dropdown" *ngIf="dropdownVisible">
-                <li (click)="logout()">Sair</li>
-            </ul>
-        </div>
-    </div>
+    <app-header></app-header>
     <div class="info-container">
         <div class="info">
             <h1>Bem-vindo, {{username}}</h1>
