--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -12,7 +12,7 @@
     <div class="info-container">
         <div class="info">
             <h1>Bem-vindo, {{username}}</h1>
-            <p>O teste psicológico foi criado para medir sua atenção, para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
+            <p>O teste Focus foi criado para medir sua atenção, para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
             <div class="gif-content">
                 <img src="./assets/action.gif" alt="">
             </div>
