--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="header">
-        <img src="./assets/vale-logo-preto.png" alt="">
+        <img src="./assets/vale_logo_black.png" alt="">
         <img src="./assets/focus_name.png" alt="">
         <div class="action">
             <img src="./assets/user.png" alt="" (click)="showDropDown()">
@@ -14,9 +14,9 @@
             <h2>Bem-vindo, {{username}}</h2>
             <p>O teste Focus foi criado para medir sua atenção, para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
             <div class="gif-content">
-                <img src="./assets/action.gif" alt="">
+                <img id="gif" src="" alt="">
             </div>
-            <p>Clique na <span>barra de espaço</span> do teclado, toda vez que <span>a imagem correta aparecer.</span></p>
+            <p>Clique na <span id="info-click"></span>, toda vez que <span>a imagem correta aparecer.</span></p>
         </div>
         <div class="img-container">
             <span>Figura Correta:</span>
