--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="header">
-        <img src="./assets/vale-logo-branco.png" alt="" (click)="redirectHome()">
+        <img src="./assets/vale_logo_white.png" alt="" (click)="redirectHome()">
     </div>
     <div class="secound-container">
         <div class="login-container">
