--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -93,4 +93,9 @@
         cursor: pointer;
     }
 }
+@media screen and (max-width: 600px) {
+    .input-field {
+        padding: 0 1rem;
+    }
+}
 
