--- a/src/app/exame/exame.component.html
+++ b/src/app/exame/exame.component.html
@@ -1,3 +1,4 @@
-<div class="main-container" id="stage" >
-    
+<div class="main-container">
+    <div class="exam-container" id="stage" >
+    </div>
 </div>
