--- a/src/app/exame/exame.component.scss
+++ b/src/app/exame/exame.component.scss
@@ -2,6 +2,14 @@
     width: 100vw;
     height: 100vh;
     background-color: var(--background-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.exam-container {
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
 }  
 .result-styles {
     display: grid;
