--- a/src/app/exame/exame.component.scss
+++ b/src/app/exame/exame.component.scss
@@ -8,7 +8,8 @@
 }
 .exam-container {
     width: 100%;
-    height: 100%;
+    height: 90%;
+    background-color: aqua;
 }  
 .result-styles {
     display: grid;
