--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -18,6 +18,7 @@
     }
 }
 .action {
+    width: 4.5rem;
     img {
         width: 1.5rem;
         cursor: pointer;
@@ -27,7 +28,7 @@
     list-style-type: none;
     position: absolute;
     top: 3rem;
-    right: 1.5rem;
+    right: 3rem;
     li{
         padding: 0.5rem 2rem;
         background-color: #bbbcc2;
