--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -74,6 +74,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2rem;
     img {
         width: 17rem;
     }
