--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,8 @@
     <div class="action">
         <img src="./assets/user.png" alt="" (click)="showDropDown()">
         <ul id="user-info" class="dropdown" *ngIf="dropdownVisible">
+            <li (click)="redirectInfo()">Infomações</li>
+            <li (click)="redirectAnalysis()">Analise</li>
             <li (click)="logout()">Sair</li>
         </ul>
     </div>
