--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,13 +22,18 @@
     position: absolute;
     top: 3rem;
     right: 3rem;
-    li{
-        padding: 0.5rem 2rem;
-        background-color: #bbbcc2;
-        border-radius: 0.2rem;
-        &:hover {
-            background-color: var(--background-color);
-            color: var(--default-text-color);
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+    z-index: 999;
+        li{
+            padding: 0.5rem 2rem;
+            background-color: #bbbcc2;
+            border-radius: 0.2rem;
+            &:hover {
+                background-color: var(--background-color);
+                color: var(--default-text-color);
+            }
         }
-    }
+    
 }
