--- a/src/app/analysis/analysis.component.html
+++ b/src/app/analysis/analysis.component.html
@@ -1,1 +1,20 @@
-<app-header></app-header>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="analysis-container">
+        <div class="table-container">
+            <div class="filter">
+                <div class="input-container">
+                    <label for="date">Data:</label>
+                    <input type="date" id="date">
+                </div>
+            </div>
+            <div class="table"></div>
+        </div>
+        <div class="dash-container">
+            <div class="dash">
+
+            </div>
+        </div>
+    </div>
+</div>
+
