--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,18 @@
 .header {
     width: 100vw;
     padding: 1rem 2rem;
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 50%;
     justify-content: space-between;
-    img {
-    width: 5rem;
-    }
-    img:nth-child(2){
+    background-color: var(--background-color);
+    .logo {
+        display: flex;
+        align-items: center;
+        padding-left: 2rem;
+        width: 12rem;
+        img {
         width: 6rem;
+        }
     }
 }
 .action {
