--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,44 +1,106 @@
 .header {
     width: 100vw;
-    padding: 1rem 2rem;
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0.7rem 0;
     background-color: var(--background-color);
-    .logo {
-        display: flex;
-        align-items: center;
-        padding-left: 2rem;
-        width: 12rem;
-        img {
-        width: 6rem;
-        }
+}
+.logo {
+    display: flex;
+    align-items: center;
+    padding-left: 5rem;
+    img {
+    width: 6rem;
     }
 }
 .action {
-    width: 4.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 5rem;
+    gap: 3rem;
+} 
+.routes-container {
+    color: var(--default-text-color);
+    height: 100%;
+}
+.routes {
+    list-style-type: none;
+    display: flex;
+    gap: 2rem;
+    li {
+        padding: 0.6rem 1rem ;
+        border-radius: 0.3rem;
+        &:hover {
+            background-color: #e0e0e0;
+            color: var(--background-color);
+            cursor: pointer;
+        }
+    }
+}
+.user-options {
+    display: flex;
+    align-items: center;
     img {
-        width: 1.5rem;
+        width: 2rem;
         cursor: pointer;
     }
 }
 .dropdown {
     list-style-type: none;
+    width: 18rem;
     position: absolute;
-    top: 3rem;
-    right: 3rem;
+    top: 5rem;
+    right: 5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.2rem;
+    gap: 0.3rem;
+    background-color: rgb(228, 230, 234);
+    padding: 1rem;
     z-index: 999;
         li{
-            padding: 0.5rem 2rem;
-            background-color: #bbbcc2;
             border-radius: 0.2rem;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            span {
+                width: 7rem;
+                text-align: start;
+            }
             &:hover {
-                background-color: var(--background-color);
-                color: var(--default-text-color);
+                background-color: rgb(203, 205, 209);
+            }
+            img {
+                width: 1rem;
+                opacity: 0.7;
             }
         }
     
+}
+.img-dropdown {
+    padding: 0.6rem;
+    background-color: rgb(210, 205, 205);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        opacity: 0.7;
+        width: 1.3rem !important;
+    }
+}
+
+@media screen and ( max-width: 600px){
+    .logo {
+        padding: 0.5rem 2rem;
+    }
+    .routes-container {
+        display: none;
+    }
+    .dropdown {
+        right: 2rem;
+    }
 }
