--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -41,7 +41,7 @@
 // }
 .info-container {
     width: 90%;
-    height: 100%;
+    height: 90%;
     display: grid;
     grid-template-columns: 60% 40%;
 }
@@ -74,6 +74,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2rem;
     img {
         width: 17rem;
     }
