--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="logo">
-        <img src="./assets/focus_white.png" alt="">
+        <img src="./assets/focus_white.png" (click)="redirectInfo()" alt="">
     </div>
     <div class="action">
         <div class="routes-container">
