--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,7 +11,8 @@
     align-items: center;
     padding-left: 5rem;
     img {
-    width: 6rem;
+        width: 6rem;
+        cursor: pointer;
     }
 }
 .action {
@@ -56,8 +57,9 @@
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
-    background-color: rgb(228, 230, 234);
+    background-color: rgb(255, 255, 255);
     padding: 1rem;
+    box-shadow: 3px 3px 10px -5px;
     z-index: 999;
         li{
             border-radius: 0.2rem;
