--- a/src/app/analysis/analysis.component.scss
+++ b/src/app/analysis/analysis.component.scss
@@ -91,7 +91,7 @@
     justify-content: center;
     width: 100%;
     gap: 0.5rem;
-    background-color: rgb(226, 226, 228);
+    // background-color: rgb(226, 226, 228);
     padding: 1rem 0;
 }
 .table-row {
