--- a/src/app/analysis/analysis.component.scss
+++ b/src/app/analysis/analysis.component.scss
@@ -60,9 +60,9 @@
     height: max-content;
     display: flex;
     flex-direction: column;
-    // color: var(--default-text-color);
-    color: var(--background-color);
-    // background-color: rgb(212, 212, 214);
+    color: var(--default-text-color);
+    // color: var(--background-color);
+    background-color: rgb(212, 212, 214);
 }
 .table-header {
     display: flex;
@@ -74,7 +74,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // background-color: #343773;
+    background-color: #343773;
     div {
         width: 10rem;
         padding: 1rem;
@@ -91,7 +91,7 @@
     justify-content: center;
     width: 100%;
     gap: 0.5rem;
-    // background-color: rgb(226, 226, 228);
+    background-color: rgb(226, 226, 228);
     padding: 1rem 0;
 }
 .table-row {
