--- a/src/app/analysis/analysis.component.html
+++ b/src/app/analysis/analysis.component.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="dash-container">
-            <div class="dash-content">
+            <div id="dash-content" class="dash-content">
                 <canvas id="dash" class="dash"></canvas>
             </div>
         </div>
