--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
             <ul class="routes">
                 <li (click)="redirectInfo()">Início</li>
                 <li (click)="redirectAnalysis()">Análise</li>
-                <li (click)="onBuild()">Painel</li>
+                <li (click)="redirectAdmin()">Painel</li>
             </ul>
         </div>
         <div class="user-options">
