--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="input-container">
                     <label for="user">Usuário:</label>
-                    <input type="text" id="user" [(ngModel)]="objectUser.user" disabled>
+                    <input type="text" id="user" [(ngModel)]="objectUser.user">
                 </div>
                 <div class="input-container">
                     <label for="password">Senha:</label>
