--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -14,10 +14,8 @@
                 </div>
                 <div class="input-container">
                     <label for="password">Senha:</label>
-                    <!-- <select name="password" id="password" [(ngModel)]="objectUser.password">
-                        <option value="vale2024">Senha Padrão</option>
-                    </select> -->
-                    <input type="text" id="password" name="password" [(ngModel)]="objectUser.password">
+                    <input type="text" id="password" name="password" [(ngModel)]="objectUser.password" [disabled]="passChanger">
+                    <input type="checkbox" id="passchanger" [(ngModel)]="passChanger" (change)="setDefaultPass()">
                 </div>
                 <div class="input-container">
                     <label for="role">Função:</label>
