--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -14,8 +14,10 @@
                 </div>
                 <div class="input-container">
                     <label for="password">Senha:</label>
-                    <input type="text" id="password" name="password" [(ngModel)]="objectUser.password" [disabled]="passChanger">
-                    <input type="checkbox" id="passchanger" [(ngModel)]="passChanger" (click)="setDefaultPass()">
+                    <div class="pass-field">
+                        <input type="text" id="password" name="password" [(ngModel)]="objectUser.password" [disabled]="passChanger">
+                        <input type="checkbox" id="passchanger" [(ngModel)]="passChanger" (click)="setDefaultPass()">
+                    </div>
                 </div>
                 <div class="input-container">
                     <label for="role">Função:</label>
