--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -62,6 +62,12 @@
     width: 100%;
     display: flex;
     gap: 1rem;
+    input {
+        width: 70%;
+    }
+    input[type=checkbox] {
+        width: 20%;
+    }
 }
 
 
