--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -58,16 +58,10 @@
         outline: none;
     }
 }
-.passfield {
+.pass-field {
     width: 100%;
     display: flex;
     gap: 1rem;
-    input {
-        width: 70%;
-    }
-    input[type=checkbox] {
-        width: 20%;
-    }
 }
 
 
