--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -46,7 +46,7 @@
     justify-content: flex-start;
     gap: 1rem;
     label {
-        width: 5rem;
+        min-width: 6rem;
     }
     input {
         width: 100%;
