--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -1,6 +1,6 @@
 .main-container {
     width: 100vw;
-    height: 100vh;
+    height:100vh;
     display: grid;
     grid-template-rows: 0.1fr 1fr 0.1fr;
     place-items: center;
@@ -65,29 +65,10 @@
         }
     }
 }
-@media screen and (max-width: 600px) {
-    .info-container {
-        width: 90%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 3rem;
-    }
-    .info {
-        padding: 0;
-        padding-top: 2rem;
-    }
-    .img-container {
-        margin-bottom: 5rem;
-    }
-    .action {
-        width: 2rem;
-    }
-}
 .first-access-panel {
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(182, 181, 181, 0.733);
     display: grid;
     place-items: center;
@@ -136,8 +117,38 @@
         background-color: #e4e6e8;
         padding: 0.2rem 0 0.2rem 1rem;
     }
+    img {
+        width: 1.5rem;
+        position: relative;
+        bottom: 1.6rem;
+        left: 90%;
+        cursor: pointer;
+    }
 }
 @media screen and (max-width: 600px) {
+    .main-container {
+        height: 100%;
+    }
+    .first-access-panel {
+        height: 130%;
+    }
+    .info-container {
+        width: 90%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    }
+    .info {
+        padding: 0;
+        padding-top: 2rem;
+    }
+    .img-container {
+        margin-bottom: 5rem;
+    }
+    .action {
+        width: 2rem;
+    }
     .pass-container {
         width: 90%;
         height: 60%;
@@ -148,5 +159,6 @@
     .input-container {
         width: 80%
     }
+    
 
 }
