--- a/src/app/analysis/analysis.component.scss
+++ b/src/app/analysis/analysis.component.scss
@@ -1,8 +1,9 @@
 .background-green {
-    background-color: #B2F205;
+    background-color: #007E7A;
+    color: var(--default-text-color) !important;
 }
 .background-red {
-    background-color: #F22E05;
+    background-color: #C42222;
     color: var(--default-text-color) !important;
 }
 .main-container {
