--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -3,14 +3,14 @@
     <div class="info-container">
         <div class="info">
             <h2>Bem-vindo, {{username}}</h2>
-            <p>O teste Focus foi criado para medir sua atenção, para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
+            <p>O teste Focus foi criado para medir sua atenção. Para realizá-lo, leia as instruções abaixo. Boa sorte!</p>
             <div class="gif-content">
                 <img id="gif" src="" alt="">
             </div>
-            <p>Clique na <span id="info-click"></span>, toda vez que <span>a imagem correta aparecer.</span></p>
+            <p>Clique <span id="info-click"></span>, toda vez que <span>a imagem correta aparecer.</span></p>
         </div>
         <div class="img-container">
-            <span>Figura Correta:</span>
+            <span>Imagem Correta:</span>
             <img id="random-img" src="./assets/triangulo_vazado.png" alt="">
         </div>
     </div>
