--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,10 @@
 	--aux-red: #F20505;
 	--aux-purple: #343773;
 	--aux-purple-secondary: #344B7D;
+	--graph-red-color: #c42222;
+	--graph-yellow-color: #ECB11F;
+	--graph-green-color: #007E7A;
+
 }
 
 * {
