--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     height:100vh;
     display: grid;
-    grid-template-rows: 0.1fr 1fr 0.1fr;
+    grid-template-rows: max-content 1fr 0.1fr;
     place-items: center;
 }
 .info-container {
@@ -41,6 +41,11 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    span {
+        color: var(--aux-purple);
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
     img {
         width: 17rem;
     }
@@ -66,12 +71,16 @@
     }
 }
 .first-access-panel {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100%;
     background-color: rgba(182, 181, 181, 0.733);
     display: grid;
     place-items: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 .pass-container {
     background-color: rgb(255, 255, 255);
@@ -92,7 +101,7 @@
     height: 60%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
     button {
         width: 50%;
@@ -127,10 +136,10 @@
 }
 @media screen and (max-width: 600px) {
     .main-container {
-        height: 100%;
+        height: max-content;
     }
     .first-access-panel {
-        height: 180%;
+        height: 100%;
     }
     .info-container {
         width: 90%;
