--- a/src/app/analysis/analysis.component.scss
+++ b/src/app/analysis/analysis.component.scss
@@ -6,6 +6,10 @@
     background-color: #C42222;
     color: var(--default-text-color) !important;
 }
+.background-yellow {
+    background-color: #ECB11F;
+    color: var(--default-text-color) !important;
+}
 .main-container {
     width: 100vw;
     height: 100vh;
