--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -94,6 +94,9 @@
 }
 
 @media screen and ( max-width: 600px){
+    .action {
+        padding-right: 3rem;
+    }
     .logo {
         padding: 0.5rem 2rem;
     }
