--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -37,4 +37,15 @@
     }
 }
 
+@media screen and (max-width: 600px) {
+    .logo-container {
+        display: flex;
+        justify-content: center;
+        img {
+            width: 90%;
+            padding-top: 8rem;
+        }
+    }
+}
+
 
